--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,15 @@
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-beautifulsoup4==4.12.3
-blinker==1.7.0
-Brlapi==0.8.5
-certifi==2023.11.17
-cffi==1.16.0
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.4.1
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-cryptography==41.0.7
-cssselect==1.2.0
-cupshelpers==1.0
-dbus-python==1.3.2
-defer==1.0.6
-distro==1.9.0
-distro-info==1.7+build1
-dnspython==2.6.1
-filelock==3.13.1
-gyp==0.1
-html5lib==1.1
-htmlmin==0.1.12
-httplib2==0.20.4
-idna==3.6
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-LinkFinder==1.0
-louis==3.29.0
-lxml==5.2.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-netaddr==0.8.0
-netifaces==0.11.0
-oauthlib==3.2.2
-packaging==24.0
-ply==3.11
-pycairo==1.25.1
-pycparser==2.21
-pycups==2.0.1
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-pyparsing==3.1.1
-PyQt5==5.15.10
-PyQt5-sip==12.13.0
-PyQtWebEngine==5.15.6
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-python-magic==0.4.27
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-QtPy==2.4.1
-requests==2.31.0
-requests-file==1.5.1
-rich==13.7.1
-setuptools==68.1.2
-six==1.16.0
-soupsieve==2.5
-systemd-python==235
-termcolor==1.1.0
-tldextract==3.1.2
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-vboxapi==1.0
-wadllib==1.3.6
-webencodings==0.5.1
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
+blinker==1.9.0
+click==8.2.1
+dnspython==2.7.0
+dotenv==0.9.9
+Flask==3.1.1
+flask-cors==6.0.1
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+pymongo==4.13.2
+python-dotenv==1.1.0
+uuid==1.30
+Werkzeug==3.1.3
